# ai-file-process-app

./: .dockerignore  .env.example  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  dprint.json  package.json
backend/: .gitignore  .prettierrc  Cargo.toml  Dockerfile.dev  biome.json  package.json  pyproject.toml  tsconfig.json
backend/app/: __init__.py  config.py  exceptions.py  main.py
backend/app/models/: __init__.py  file_types.py  operations.py  requests.py  responses.py
backend/app/routes/: __init__.py  files.py  health.py
backend/app/services/: __init__.py  ai_provider.py  anthropic_provider.py  file_extractor.py  openai_provider.py
backend/src/: config.ts  errors.rs  index.ts  main.rs
backend/src/models/: ai.rs  anthropic.rs  config.rs  file_extractor.rs  file_processing.rs  mod.rs  openai.rs
backend/src/routes/: file_processing.rs  files.ts  health.ts  index.ts  mod.rs
backend/src/services/: ai-provider.ts  ai_provider.rs  anthropic-provider.ts  anthropic.rs  file-extractor.ts  file_extractor.rs  index.ts  mod.rs  openai-provider.ts  openai.rs
backend/src/types/: file-types.ts  index.ts  operations.ts  responses.ts
backend/tests/: test_file_extractor.py  test_providers.py
docs/: docker-plan.md  plan.md  requirements.md
frontend/: package.json  vite.config.ts  vitest.config.ts
frontend/src/lib/components/: FileUpload.svelte  ProcessingProgress.svelte  ResultDisplay.svelte
frontend/src/lib/constants/: languages.ts  operations.ts  translations.ts
frontend/src/lib/stores/: fileProcessor.svelte.ts
frontend/src/lib/types/: fileProcessor.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/process/: +page.svelte
