[workspace]
resolver = "2"
members = ["backend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optimize WASM size in release builds
[profile.release]
opt-level = "s"
lto = true
