[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
dotenvy = "0.15"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

# AI file processing dependencies
reqwest = { version = "0.12", features = ["json", "multipart"] }
async-trait = "0.1"
thiserror = "2.0"
infer = "0.16"
pdf-extract = "0.7"
docx-rs = "0.4"
bytes = "1.9"
base64 = "0.22"
mime = "0.3"
futures = "0.3"
